# JDC_Midi_Mapper

./: .gitignore  CMakeLists.txt  README.md  Xcode.build.md  build-to-outputs.sh
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
build-ninja/: CMakeCache.txt
build-xcode/: CMakeCache.txt
docs/: Xcode-Build.md
